--- a/app/src/main/res/layout/fragment_address_dialog.xml
+++ b/app/src/main/res/layout/fragment_address_dialog.xml
@@ -108,7 +108,7 @@
                             android:layout_height="match_parent"
                             android:backgroundTint="#00000000"
                             android:gravity="center_vertical"
-                            android:hint="@{viewModel.address.genderSmallString}"
+                            android:hint=""
                             android:inputType="none"
                             android:paddingTop="2dp"
                             android:textSize="16dp" />
