--- a/app/src/main/res/layout/fragment_verify.xml
+++ b/app/src/main/res/layout/fragment_verify.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<layout xmlns:app="http://schemas.android.com/apk/res-auto">
+<layout xmlns:tools="http://schemas.android.com/tools"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
 
@@ -9,8 +11,7 @@
             type="com.example.aposs_buyer.viewmodel.SignUpViewModel" />
     </data>
 
-    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context=".uicontroler.fragment.VerifyFragment">
@@ -69,10 +70,10 @@
             app:layout_constraintTop_toTopOf="parent">
 
             <LinearLayout
-                android:layout_width="match_parent"
+                android:layout_gravity="center"
+                android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:layout_marginHorizontal="50dp"
-                android:orientation="vertical">
+                android:orientation="horizontal">
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -83,6 +84,7 @@
                     android:textStyle="bold" />
 
                 <LinearLayout
+                    android:layout_marginStart="5dp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:orientation="horizontal">
@@ -99,7 +101,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="5dp"
-                        android:text="@string/cell_number"
+                        android:text="@string/email"
                         android:textColor="@color/dark_blue"
                         android:textSize="27sp"
                         android:textStyle="bold" />
@@ -128,146 +130,11 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="@string/verify_content_text" />
-                    <LinearLayout
-                        android:orientation="horizontal"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content">
-                        <TextView
-                            android:text="@{viewModel.cellNumber}"
-                            android:textColor="@color/dark_blue"
-                            android:textStyle="bold"
-                            android:textSize="17sp"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"/>
-                        <TextView
-                            android:textSize="17sp"
-                            android:layout_marginStart="5dp"
-                            android:text="@string/via_sms_message"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"/>
-                    </LinearLayout>
-                    <LinearLayout
-                        android:orientation="horizontal"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content">
-                        <TextView
-                            android:id="@+id/change"
-                            android:textAllCaps="true"
-                            android:text="@string/change"
-                            android:textColor="@color/yellow"
-                            android:textStyle="bold"
-                            android:textSize="17sp"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"/>
-                        <TextView
-                            android:textSize="17sp"
-                            android:layout_marginStart="5dp"
-                            android:text="@string/your_number"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"/>
-                    </LinearLayout>
+
                 </LinearLayout>
             </androidx.cardview.widget.CardView>
-            <LinearLayout
-                android:layout_gravity="center_horizontal"
-                android:orientation="horizontal"
-                android:layout_marginTop="20dp"
-                android:layout_marginHorizontal="40dp"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content">
-                <androidx.cardview.widget.CardView
-                    android:layout_marginHorizontal="5dp"
-                    app:cardCornerRadius="5dp"
-                    android:layout_width="50dp"
-                    android:layout_height="50dp">
-                    <EditText
-                        android:id="@+id/firstVerify"
-                        android:nextFocusDown="@id/secondVerify"
-                        android:text="@={viewModel.verifyString[0]}"
-                        android:afterTextChanged="@{() -> viewModel.notifyVerifyChange()}"
-                        android:gravity="center"
-                        android:textColor="@color/dark_blue"
-                        android:textStyle="bold"
-                        android:padding="0dp"
-                        android:inputType="number"
-                        android:maxLines="1"
-                        android:maxEms="1"
-                        android:maxLength="1"
-                        android:background="@color/white"
-                        android:textSize="27sp"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"/>
-                </androidx.cardview.widget.CardView>
-                <androidx.cardview.widget.CardView
-                    android:layout_marginHorizontal="5dp"
-                    app:cardCornerRadius="5dp"
-                    android:layout_width="50dp"
-                    android:layout_height="50dp">
-                    <EditText
-                        android:nextFocusDown="@id/thirdVerify"
-                        android:id="@+id/secondVerify"
-                        android:text="@={viewModel.verifyString[1]}"
-                        android:afterTextChanged="@{() -> viewModel.notifyVerifyChange()}"
-                        android:inputType="number"
-                        android:maxLines="1"
-                        android:maxEms="1"
-                        android:maxLength="1"
-                        android:gravity="center"
-                        android:textColor="@color/dark_blue"
-                        android:textStyle="bold"
-                        android:padding="0dp"
-                        android:background="@color/white"
-                        android:textSize="27sp"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"/>
-                </androidx.cardview.widget.CardView>
-                <androidx.cardview.widget.CardView
-                    android:layout_marginHorizontal="5dp"
-                    app:cardCornerRadius="5dp"
-                    android:layout_width="50dp"
-                    android:layout_height="50dp">
-                    <EditText
-                        android:nextFocusDown="@id/lastVerify"
-                        android:id="@+id/thirdVerify"
-                        android:text="@={viewModel.verifyString[2]}"
-                        android:afterTextChanged="@{() -> viewModel.notifyVerifyChange()}"
-                        android:gravity="center"
-                        android:textColor="@color/dark_blue"
-                        android:textStyle="bold"
-                        android:padding="0dp"
-                        android:inputType="number"
-                        android:maxLines="1"
-                        android:maxEms="1"
-                        android:maxLength="1"
-                        android:background="@color/white"
-                        android:textSize="27sp"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"/>
-                </androidx.cardview.widget.CardView>
-                <androidx.cardview.widget.CardView
-                    android:layout_marginHorizontal="5dp"
-                    app:cardCornerRadius="5dp"
-                    android:layout_width="50dp"
-                    android:layout_height="50dp">
-                    <EditText
-                        android:id="@+id/lastVerify"
-                        android:afterTextChanged="@{() -> viewModel.notifyVerifyChange()}"
-                        android:text="@={viewModel.verifyString[3]}"
-                        android:gravity="center"
-                        android:textColor="@color/dark_blue"
-                        android:textStyle="bold"
-                        android:padding="0dp"
-                        android:inputType="number"
-                        android:maxLines="1"
-                        android:maxEms="1"
-                        android:maxLength="1"
-                        android:background="@color/white"
-                        android:textSize="27sp"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"/>
-                </androidx.cardview.widget.CardView>
-            </LinearLayout>
             <TextView
+                android:id="@+id/resent"
                 android:textStyle="bold"
                 android:textColor="@color/dark_blue"
                 android:text="@string/resend_otp"
@@ -276,7 +143,31 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"/>
 
-
         </LinearLayout>
+
+        <TextView
+            android:layout_marginBottom="10dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:text="Register complete? Sign in now!"
+            android:textColor="@color/dark_blue"
+            app:layout_constraintBottom_toTopOf="@+id/signIn"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent" />
+
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/signIn"
+            android:layout_width="250dp"
+            android:layout_height="55dp"
+            android:layout_gravity="center"
+            android:layout_marginHorizontal="30dp"
+            android:background="@drawable/bg_ouline_login_button"
+            android:text="@string/sign_in"
+            android:textColor="@color/dark_blue"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/imageView" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
