--- a/app/src/main/res/navigation/navigation_login.xml
+++ b/app/src/main/res/navigation/navigation_login.xml
@@ -32,15 +32,8 @@
         android:label="fragment_verify"
         tools:layout="@layout/fragment_verify" >
         <action
-            android:id="@+id/action_verifyFragment_to_successFragment"
-            app:destination="@id/successFragment" />
-        <action
-            android:id="@+id/action_verifyFragment_to_signUpFragment"
-            app:destination="@id/signUpFragment" />
+            android:id="@+id/action_verifyFragment_to_loginFragment"
+            app:destination="@id/loginFragment" />
     </fragment>
-    <fragment
-        android:id="@+id/successFragment"
-        android:name="com.example.aposs_buyer.uicontroler.fragment.SuccessFragment"
-        android:label="fragment_success"
-        tools:layout="@layout/fragment_success" />
+
 </navigation>
