--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -189,6 +189,7 @@
                                 android:orientation="horizontal">
 
                                 <androidx.appcompat.widget.AppCompatButton
+                                    android:id="@+id/loginWithGoogle"
                                     android:layout_width="65dp"
                                     android:layout_height="42dp"
                                     android:background="@drawable/ic_google_login" />
