--- a/app/src/main/res/layout/fragment_cart.xml
+++ b/app/src/main/res/layout/fragment_cart.xml
@@ -148,6 +148,7 @@
                         android:textColor="@color/dark_pray"
                         android:textSize="16sp" />
                     <ProgressBar
+                        android:visibility="gone"
                         android:id="@+id/loadingProgress"
                         android:layout_marginTop="10dp"
                         android:layout_width="50dp"
