--- a/app/src/main/res/layout/fragment_address_dialog.xml
+++ b/app/src/main/res/layout/fragment_address_dialog.xml
@@ -4,10 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
-
         <variable
             name="viewModel"
-            type="com.example.aposs_buyer.viewmodel.AddressDialogViewModel" />
+            type="com.example.aposs_buyer.viewmodel.AddressViewModel" />
     </data>
 
     <androidx.core.widget.NestedScrollView
@@ -28,11 +27,14 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
                 android:layout_marginBottom="5dp"
-                android:text="Name"
+                android:text="@string/name_tag"
                 android:textColor="@color/edit_user_detail_color"
-                android:textSize="14dp" />
+                android:textSize="14sp" />
 
             <EditText
+                android:text="@{viewModel.currentAddress.name}"
+                android:autofillHints="name"
+                android:inputType="text"
                 android:id="@+id/et_name"
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                 android:layout_width="match_parent"
@@ -41,8 +43,8 @@
                 android:background="@drawable/bg_edit_user_detail"
                 android:maxLines="1"
                 android:paddingHorizontal="15dp"
-                android:text="@={viewModel.name}"
-                android:textSize="16dp" />
+                android:textSize="16sp"
+                tools:ignore="LabelFor" />
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -57,11 +59,13 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginBottom="5dp"
-                        android:text="Phone"
+                        android:text="@string/phone_tag"
                         android:textColor="@color/edit_user_detail_color"
-                        android:textSize="14dp" />
+                        android:textSize="14sp" />
 
                     <EditText
+                        android:text="@{viewModel.currentAddress.phoneNumber}"
+                        android:autofillHints="phone"
                         android:id="@+id/et_phone"
                         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                         android:layout_width="match_parent"
@@ -70,23 +74,24 @@
                         android:background="@drawable/bg_edit_user_detail"
                         android:maxLines="1"
                         android:paddingHorizontal="15dp"
-                        android:text="@={viewModel.cellNumber}"
-                        android:textSize="16dp" />
+                        android:textSize="16sp"
+                        android:inputType="phone"
+                        tools:ignore="LabelFor" />
                 </LinearLayout>
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="10dp"
+                    android:layout_marginStart="10dp"
                     android:orientation="vertical">
 
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginBottom="5dp"
-                        android:text="Gender"
+                        android:text="@string/gender_tag"
                         android:textColor="@color/edit_user_detail_color"
-                        android:textSize="14dp" />
+                        android:textSize="14sp" />
 
                     <com.google.android.material.textfield.TextInputLayout
                         style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense.ExposedDropdownMenu"
@@ -108,10 +113,10 @@
                             android:layout_height="match_parent"
                             android:backgroundTint="#00000000"
                             android:gravity="center_vertical"
-                            android:hint=""
                             android:inputType="none"
                             android:paddingTop="2dp"
-                            android:textSize="16dp" />
+                            android:textSize="16sp"
+                            tools:ignore="LabelFor" />
                     </com.google.android.material.textfield.TextInputLayout>
                 </LinearLayout>
             </LinearLayout>
@@ -120,9 +125,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="5dp"
-                android:text="City"
+                android:text="@string/city_tag"
                 android:textColor="@color/edit_user_detail_color"
-                android:textSize="14dp" />
+                android:textSize="14sp" />
 
             <com.google.android.material.textfield.TextInputLayout
                 style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense.ExposedDropdownMenu"
@@ -144,19 +149,19 @@
                     android:layout_height="match_parent"
                     android:backgroundTint="#00000000"
                     android:gravity="center_vertical"
-                    android:hint="@{viewModel.address.city}"
                     android:inputType="none"
                     android:paddingTop="2dp"
-                    android:textSize="16sp" />
+                    android:textSize="16sp"
+                    tools:ignore="LabelFor" />
             </com.google.android.material.textfield.TextInputLayout>
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="5dp"
-                android:text="District"
+                android:text="@string/district_tag"
                 android:textColor="@color/edit_user_detail_color"
-                android:textSize="14dp" />
+                android:textSize="14sp" />
 
             <com.google.android.material.textfield.TextInputLayout
                 style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense.ExposedDropdownMenu"
@@ -178,19 +183,19 @@
                     android:layout_height="match_parent"
                     android:backgroundTint="#00000000"
                     android:gravity="center_vertical"
-                    android:hint="@{viewModel.address.district}"
                     android:inputType="none"
                     android:paddingTop="2dp"
-                    android:textSize="16dp" />
+                    android:textSize="16sp"
+                    tools:ignore="LabelFor" />
             </com.google.android.material.textfield.TextInputLayout>
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="5dp"
-                android:text="Ward"
+                android:text="@string/ward_tag"
                 android:textColor="@color/edit_user_detail_color"
-                android:textSize="14dp" />
+                android:textSize="14sp" />
 
             <com.google.android.material.textfield.TextInputLayout
                 style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense.ExposedDropdownMenu"
@@ -212,21 +217,22 @@
                     android:layout_height="match_parent"
                     android:backgroundTint="#00000000"
                     android:gravity="center_vertical"
-                    android:hint="@{viewModel.address.ward}"
                     android:inputType="none"
                     android:paddingTop="2dp"
-                    android:textSize="16sp" />
+                    android:textSize="16sp"
+                    tools:ignore="LabelFor" />
             </com.google.android.material.textfield.TextInputLayout>
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="5dp"
-                android:text="Address lane"
+                android:text="@string/address_lane_tag"
                 android:textColor="@color/edit_user_detail_color"
-                android:textSize="14dp" />
+                android:textSize="14sp" />
 
             <EditText
+                android:text="@{viewModel.currentAddress.addressLane}"
                 android:id="@+id/et_addressLane"
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                 android:layout_width="match_parent"
@@ -234,55 +240,69 @@
                 android:background="@drawable/bg_edit_user_detail"
                 android:maxLines="1"
                 android:paddingHorizontal="15dp"
-                android:text="@{viewModel.address.addressLane}"
-                android:textSize="16dp" />
+                android:textSize="16sp"
+                android:importantForAutofill="no"
+                android:inputType="text"
+                tools:ignore="LabelFor" />
+
             <androidx.appcompat.widget.AppCompatCheckBox
-                android:text="@string/set_as_default_address"
-                android:id="@+id/cb_is_default"
+                android:checked="@{viewModel.currentAddress.defaultAddress}"
                 android:layout_width="match_parent"
-                android:checked="@={viewModel.isDefault()}"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:text="@string/set_as_default_address">
 
             </androidx.appcompat.widget.AppCompatCheckBox>
+            <androidx.appcompat.widget.AppCompatButton
+                android:layout_width="match_parent"
+                android:visibility="gone"
+                android:layout_height="45dp"
+                android:layout_rowWeight="1"
+                android:layout_columnWeight="1"
+                android:background="@drawable/bg_edit_address"
+                android:text="@string/submit"
+                android:textAllCaps="false"
+                android:textColor="@color/white"
+                android:textSize="16sp"
+                android:textStyle="bold" />
 
             <GridLayout
-                android:layout_marginBottom="15dp"
                 android:id="@+id/bottomButton"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginBottom="15dp"
                 android:background="@drawable/bg_ln_bottom_address"
+                android:columnCount="2"
                 android:orientation="horizontal"
-                android:rowCount="1"
-                android:columnCount="2">
+                android:rowCount="1">
 
                 <androidx.appcompat.widget.AppCompatButton
-                    android:layout_column="0"
-                    android:layout_row="0"
-                    android:layout_columnWeight="1"
-                    android:layout_rowWeight="1"
                     android:id="@+id/btn_delete"
                     android:layout_width="150dp"
                     android:layout_height="45dp"
-                    android:background="@drawable/bg_delete_address"
-                    android:text="Delete"
+                    android:layout_row="0"
+                    android:layout_rowWeight="1"
+                    android:layout_column="0"
+                    android:layout_columnWeight="1"
                     android:layout_marginEnd="5dp"
+                    android:background="@drawable/bg_delete_address"
+                    android:text="@string/delete"
                     android:textAllCaps="false"
-                    android:textSize="14sp" />
+                    android:textSize="16sp" />
 
                 <androidx.appcompat.widget.AppCompatButton
-                    android:layout_row="0"
-                    android:layout_marginStart="5dp"
-                    android:layout_column="1"
-                    android:layout_rowWeight="1"
-                    android:layout_columnWeight="1"
                     android:id="@+id/btn_edit_add_address"
                     android:layout_width="150dp"
                     android:layout_height="45dp"
+                    android:layout_row="0"
+                    android:layout_rowWeight="1"
+                    android:layout_column="1"
+                    android:layout_columnWeight="1"
+                    android:layout_marginStart="5dp"
                     android:background="@drawable/bg_edit_address"
-                    android:text="Edit"
+                    android:text="@string/edit"
                     android:textAllCaps="false"
                     android:textColor="@color/white"
-                    android:textSize="14sp"
+                    android:textSize="16sp"
                     android:textStyle="bold" />
             </GridLayout>
         </LinearLayout>
