--- a/app/src/main/res/layout/fragment_cart.xml
+++ b/app/src/main/res/layout/fragment_cart.xml
@@ -8,6 +8,14 @@
         <variable
             name="viewModel"
             type="com.example.aposs_buyer.viewmodel.CartViewModel" />
+
+        <variable
+            name="view"
+            type="android.view.View" />
+
+        <variable
+            name="loadingStatus"
+            type="com.example.aposs_buyer.utils.LoadingState" />
     </data>
 
     <FrameLayout
@@ -31,159 +39,122 @@
                 android:text="@string/app_name"
                 android:theme="@style/ThemeOverlay.AppCompat.Light">
 
-                <com.google.android.material.appbar.CollapsingToolbarLayout
+                <androidx.appcompat.widget.Toolbar
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    app:expandedTitleGravity="top">
+                    android:background="@color/light_green">
 
-                    <androidx.appcompat.widget.Toolbar
+                    <RelativeLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:background="@color/light_green">
+                        android:layout_marginHorizontal="20dp"
+                        android:layout_marginTop="10dp"
+                        android:gravity="center|top"
+                        android:orientation="vertical">
 
                         <RelativeLayout
+                            android:id="@+id/toolBox"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:layout_marginHorizontal="20dp"
                             android:layout_marginTop="10dp"
-                            android:gravity="center|top"
-                            android:orientation="vertical">
+                            android:orientation="horizontal">
 
-                            <RelativeLayout
-                                android:id="@+id/toolBox"
+                            <com.google.android.material.textfield.TextInputLayout
+                                android:id="@+id/search_bar"
+                                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                                 android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:layout_marginTop="10dp"
-                                android:orientation="horizontal">
+                                android:layout_height="38dp"
+                                android:layout_marginEnd="50dp"
+                                android:text="@string/search"
+                                app:boxStrokeColor="@color/disable_pray"
+                                app:boxStrokeWidth="1dp"
+                                app:boxStrokeWidthFocused="2dp"
+                                app:hintAnimationEnabled="false"
+                                app:hintEnabled="false"
+                                app:startIconDrawable="@drawable/ic_search">
 
-                                <com.google.android.material.textfield.TextInputLayout
-                                    android:id="@+id/search_bar"
-                                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                                <com.google.android.material.textfield.TextInputEditText
+                                    android:id="@+id/search"
                                     android:layout_width="match_parent"
-                                    android:layout_height="38dp"
-                                    android:layout_marginEnd="50dp"
-                                    app:boxStrokeColor="@color/disable_pray"
-                                    app:boxStrokeWidth="1dp"
-                                    app:boxStrokeWidthFocused="2dp"
-                                    app:hintAnimationEnabled="false"
-                                    app:hintEnabled="false"
-                                    app:startIconDrawable="@drawable/ic_search">
+                                    android:layout_height="wrap_content"
+                                    android:background="@drawable/bg_search"
+                                    android:editable="false"
+                                    android:padding="0dp"
+                                    android:text="@string/search"
+                                    android:textColor="@color/disable_pray" />
+                            </com.google.android.material.textfield.TextInputLayout>
 
-                                    <com.google.android.material.textfield.TextInputEditText
-                                        android:id="@+id/tiet_search_bar"
-                                        android:layout_width="match_parent"
-                                        android:layout_height="wrap_content"
-                                        android:background="@drawable/bg_search"
-                                        android:editable="false"
-                                        android:padding="0dp"
-                                        android:text="@string/search"
-                                        android:textColor="@color/disable_pray" />
-                                </com.google.android.material.textfield.TextInputLayout>
-
-                                <ImageView
-                                    android:id="@+id/img_notification"
-                                    android:layout_width="38dp"
-                                    android:layout_height="38dp"
-                                    android:layout_alignParentEnd="true"
-                                    android:layout_marginStart="10dp"
-                                    android:contentDescription="@string/image"
-                                    android:src="@drawable/ic__notifications" />
-                            </RelativeLayout>
-
-                            <TextView
-                                android:id="@+id/title"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:layout_below="@+id/toolBox"
-                                android:layout_centerHorizontal="true"
-                                android:layout_marginVertical="10dp"
-                                android:text="@string/cart"
-                                android:textColor="@color/white"
-                                android:textSize="30sp"
-                                android:textStyle="bold" />
 
                             <ImageView
-                                android:id="@+id/lnAboutUs"
-                                android:layout_width="wrap_content"
-                                android:layout_height="20dp"
-                                android:layout_below="@+id/toolBox"
-                                android:layout_marginStart="-10dp"
-                                android:layout_marginTop="7dp"
+                                android:id="@+id/img_notification"
+                                android:layout_width="38dp"
+                                android:layout_height="38dp"
+                                android:layout_alignParentEnd="true"
+                                android:layout_marginStart="10dp"
                                 android:contentDescription="@string/image"
-                                android:src="@drawable/ic_logo" />
+                                android:src="@drawable/ic__notifications" />
                         </RelativeLayout>
-                    </androidx.appcompat.widget.Toolbar>
-                </com.google.android.material.appbar.CollapsingToolbarLayout>
+
+                        <TextView
+                            android:id="@+id/title"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_below="@+id/toolBox"
+                            android:layout_centerHorizontal="true"
+                            android:layout_marginVertical="10dp"
+                            android:text="@string/cart"
+                            android:textColor="@color/white"
+                            android:textSize="30sp"
+                            android:textStyle="bold" />
+
+                        <ImageView
+                            android:id="@+id/lnAboutUs"
+                            android:layout_width="wrap_content"
+                            android:layout_height="20dp"
+                            android:layout_below="@+id/toolBox"
+                            android:layout_marginStart="-10dp"
+                            android:layout_marginTop="7dp"
+                            android:contentDescription="@string/image"
+                            android:src="@drawable/ic_logo" />
+                    </RelativeLayout>
+                </androidx.appcompat.widget.Toolbar>
             </com.google.android.material.appbar.AppBarLayout>
 
-            <androidx.core.widget.NestedScrollView
-                android:id="@+id/empty_cart"
+
+            <TextView
+                android:id="@+id/loadingMessage"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true"
+                android:layout_marginTop="20dp"
+                android:drawablePadding="10dp"
+                android:text="@string/cart_empty_2"
+                android:textAlignment="center"
+                android:textColor="@color/dark_pray"
+                android:textSize="16sp"
+                android:visibility="@{(viewModel.loadingStatus==loadingStatus.Success &amp;&amp; viewModel.lstCartItem.size()==0)?view.VISIBLE:view.GONE}"
+                app:drawableTopCompat="@drawable/ic_empty" />
+
+            <ProgressBar
+                android:id="@+id/loadingProgress"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_centerInParent="true"
+                android:visibility="@{viewModel.loadingStatus == loadingStatus.Loading?view.VISIBLE:view.GONE}" />
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/rc_cart"
+                userCartData="@{viewModel.lstCartItem}"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_centerVertical="true"
-                android:layout_marginHorizontal="10dp"
-                android:visibility="visible"
-                app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="476dp"
-                    android:layout_gravity="center"
-                    android:gravity="center"
-                    android:orientation="vertical"
-                    android:visibility="visible">
-
-
-                    <ImageView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:src="@drawable/ic_empty_cart" />
-                    <TextView
-                        android:id="@+id/loadingMessage"
-                        android:layout_marginTop="20dp"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="@string/cart_empty_2"
-                        android:textAlignment="center"
-                        android:textColor="@color/dark_pray"
-                        android:textSize="16sp" />
-                    <ProgressBar
-                        android:visibility="gone"
-                        android:id="@+id/loadingProgress"
-                        android:layout_marginTop="10dp"
-                        android:layout_width="50dp"
-                        android:layout_height="50dp"/>
-                </LinearLayout>
-            </androidx.core.widget.NestedScrollView>
-
-            <androidx.core.widget.NestedScrollView
-                android:id="@+id/fullfill_cart"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_above="@+id/checkout_layout"
-                android:layout_below="@id/appBarLayout"
-                android:layout_marginHorizontal="10dp"
+                android:layout_above="@id/checkout_layout"
+                android:layout_below="@+id/appBarLayout"
                 android:layout_marginVertical="10dp"
-                android:visibility="gone">
-
-                <RelativeLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_marginBottom="100dp"
-                    android:orientation="vertical"
-                    android:windowSoftInputMode="adjustResize">
-
-                    <androidx.recyclerview.widget.RecyclerView
-                        android:id="@+id/rc_cart"
-                        isCheckOut="@{2}"
-                        listCart="@{viewModel.lstCartItem}"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginBottom="100dp"
-                        tools:itemCount="1"
-                        tools:listitem="@layout/item_cart" />
-                </RelativeLayout>
-            </androidx.core.widget.NestedScrollView>
+                android:orientation="vertical"
+                android:visibility="@{(viewModel.loadingStatus==loadingStatus.Success &amp;&amp; viewModel.lstCartItem.size()>0)?view.VISIBLE:view.GONE}"
+                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                tools:itemCount="10"
+                tools:listitem="@layout/item_cart" />
 
             <LinearLayout
                 android:id="@+id/checkout_layout"
@@ -225,11 +196,12 @@
                 </LinearLayout>
 
                 <Button
+                    android:enabled="@{viewModel.choseList.size()>0}"
                     android:id="@+id/btn_go_to_check_out"
                     android:layout_width="match_parent"
                     android:layout_height="45dp"
                     android:background="@drawable/bg_button_checkout"
-                    android:text="Check out"
+                    android:text="@string/check_out"
                     android:textStyle="bold" />
             </LinearLayout>
         </RelativeLayout>
